# adaptive-scm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default.yaml
config/experiments/: baseline.yaml  demand_spike.yaml  lead_time_disruption.yaml
config/forecasters/: arima.yaml  tft.yaml  xgboost.yaml
config/policies/: eoq.yaml  order_up_to.yaml  ppo.yaml
docs/: DESIGN_DECISIONS.md  M5_DATA.md  PRD.md
scripts/: diagnose_recovery.py  preprocess.py  report_forecast_accuracy.py  run_analysis.py  run_eda.py  run_experiment.py  run_full_suite.py  run_tests.sh  scout_products.py  train_forecaster.py  train_ppo.py
src/adaptive_scm/: __init__.py  cli.py
src/adaptive_scm/data/: __init__.py  features.py  loader.py  preprocessor.py
src/adaptive_scm/evaluation/: __init__.py  analyzer.py  hypothesis.py  metrics.py  resilience.py
src/adaptive_scm/forecasting/: __init__.py  arima.py  base.py  tft.py  xgboost.py
src/adaptive_scm/policies/: __init__.py  base.py  eoq.py  order_up_to.py  ppo.py
src/adaptive_scm/simulation/: __init__.py  disruptions.py  environment.py  episodes.py  runner.py
src/adaptive_scm/utils/: __init__.py  device.py  logging.py  openmp.py  seeding.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_data.py  test_device.py  test_episodes.py  test_evaluation.py  test_forecast_output.py  test_forecasting.py  test_hypothesis.py  test_metrics_forecast.py  test_policies.py  test_ppo.py  test_resilience.py  test_runner.py  test_scaffold.py  test_seeding.py  test_simulation.py  test_state.py
