[project]
name = "adaptive-scm"
version = "0.1.0"
description = "End-to-End AI System for Adaptive Supply Chain Optimization under Uncertainty"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Lancelot Tabiaat" },
]
license = { text = "MIT" }

# Core dependencies installed by `uv sync` — everything needed for Phase 1
# (data pipeline + classical policies + simulation skeleton + tooling).
# Heavy ML/DL deps live in optional groups to keep early-phase iteration fast.
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "click>=8.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "structlog>=24.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Phase 2 — classical and ML forecasting models
forecasting = [
    "statsmodels>=0.14",
    "pmdarima>=2.0",
    "xgboost>=2.0",
]

# Phase 2 (TFT) and Phase 4 (PPO) — deep learning stack. Heavy install (~3-5 GB).
deep = [
    "torch>=2.1",
    "pytorch-forecasting>=1.0",
    "pytorch-lightning>=2.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
]

# Dev tooling: linting, formatting, testing
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
]

# Convenience: install everything
all = [
    "adaptive-scm[forecasting,deep,dev]",
]

[project.scripts]
adaptive-scm = "adaptive_scm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_scm"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative default rule set. Tighten later if desired.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle — docstrings are required (PRD §2.4)
]
ignore = [
    "D203",  # incompatible with D211
    "D213",  # incompatible with D212
    "D100",  # missing docstring in public module — handled per-file via init exemptions
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]            # tests don't need full docstrings
"scripts/**/*.py" = ["D100"]       # scripts may have lighter docs
"**/__init__.py" = ["D104"]        # package init files exempt from doc requirement

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: end-to-end integration tests",
    "gpu: tests that require a GPU",
]

[tool.coverage.run]
source = ["src/adaptive_scm"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src"]
