[project]
name = "adaptive-scm"
version = "0.1.0"
description = "End-to-end AI system for adaptive supply chain optimization under uncertainty."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Lancelot Tabiaat" }]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "click>=8.1",
    "structlog>=24.1",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
forecasting = [
    "statsmodels>=0.14",
    "pmdarima>=2.0",
    "xgboost>=2.0",
]
deep = [
    "torch>=2.1",
    "pytorch-forecasting>=1.0",
    "pytorch-lightning>=2.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "tft: TFT tests; run in a separate process from xgboost tests (see D-4.7)",
    "ppo: PPO tests; torch-backed, run in the same group as tft (see D-4.7)",
]
